src/objects/Vep_Visitor__c.object
<CustomObject>
    <description>Factory Visitor details are stored in this object</description>
    <fields>
        <fullName>Admin_Building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_allergic_to_dust_or_smoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you allergic to dust or smoke?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_suffering_from_Asthma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you suffering from Asthma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaseUrl__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BaseUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Location__c</fullName>
        <label>Base Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Identity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Identity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Code__c</fullName>
        <label>Cost Center Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_chronicbreathing_problem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have any chronicbreathing problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_use_any_Inhaler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you use any Inhaler?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETP_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETP Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Factory_to_Visit__c</fullName>
        <label>Factory to Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Amli Factory Silvassa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barotiwala Foods Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barotiwala HPC Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhindwara Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiplun Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cochin Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cochin Exports Factory Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Exports Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Harbour Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etah Beverages Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etah Exports Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhidham LLPL Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa Personal Wash Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haldia Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haridwar HPC Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosur Beverages Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalwa Foods Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandla Exports Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khamgaon Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata Beverages Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mangalore Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mysore Beverages Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalagarh Factory - Ice Creams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasik Ice Cream Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orai Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry Beverages Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry Detergents Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry Exports Factory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_been_prescribed_any_medicines__c</fullName>
        <label>Have you been prescribed any medicines?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_felt_any_chest_pain_recently__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you felt any chest pain recently?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identity_Proof__c</fullName>
        <label>Identity Proof</label>
        <picklist>
            <picklistValues>
                <fullName>Pan/Voter Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Identity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Items_Possed__c</fullName>
        <label>Items Possessed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loading_Unloading_bay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loading/ Unloading bay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lodging_Approval_Status__c</fullName>
        <label>Lodging Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodging_Desk_Email__c</fullName>
        <label>Lodging Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lodging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lodging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_help_when_heavybreathingencounterd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need help when heavybreathingencounterd?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PanCard_Voter_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PanCard/Voter Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_to_Meet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person to Meet</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vep_Visitors3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Desk_Email__c</fullName>
        <label>Pickup Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress_Bar__c</fullName>
        <formula>IF (  ISPICKVAL( Status__c , &apos;Pending Approval&apos;), IMAGE(&quot;/resource/VEP_ProgressBar/VEP_Progressbar_Images/FactoryManagerApproval.png&quot;, &quot;Raise a Request&quot;,125,850),IF (  ISPICKVAL( Status__c , &apos;Approved&apos;) , IMAGE(&quot;/resource/VEP_ProgressBar/VEP_Progressbar_Images/SafetyQuiz.png&quot;, &quot;Approval&quot;,125,850),IF (  ISPICKVAL( Status__c , &apos;Pending Visit&apos;), IMAGE(&quot;/resource/VEP_ProgressBar/VEP_Progressbar_Images/ReceivePass.png&quot;, &quot;Approval&quot;,125,850), IF( Date_To__c &lt; TODAY() , IMAGE(&quot;/resource/VEP_ProgressBar/VEP_Progressbar_Images/VisitComplete.png&quot;, &quot;Approval&quot;,125,850), IMAGE(&quot;/resource/VEP_ProgressBar/VEP_Progressbar_Images/ReceivePass.png&quot;, &quot;Approval&quot;,125,850)) ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prohibited_Items__c</fullName>
        <formula>IMAGE(&quot;/resource/VEP_ProhibiteditemsImage&quot;, &quot;Prohibited Items&quot;,320,400)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prohibited Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Visit_Other__c</fullName>
        <label>Reason for Visit Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Visit__c</fullName>
        <label>Reason for Visit</label>
        <picklist>
            <picklistValues>
                <fullName>OEM Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers-Product Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts-HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainee Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_on_Behalf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request on Behalf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Quiz_Url__c</fullName>
        <formula>If( ISPICKVAL( Status__c , &apos;Approved&apos;)  &amp;&amp;   RecordType.Name  = &apos;Request Readonly&apos; &amp;&amp;  $User.Id =  OwnerId , HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;apex/VEP_SafetyQuiz_VF?VEPnumber=&quot;&amp; VEP_Number__c,&quot;Click to open safety Quiz Link&quot;) ,&apos;&apos;)</formula>
        <label>Safety Quiz Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrapyard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scrapyard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shop_Floor_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shop Floor Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storage_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Approval_Status__c</fullName>
        <label>Travel Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Desk_Email__c</fullName>
        <label>Travel Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VEP_Number__c</fullName>
        <displayFormat>Vep-{0000000}</displayFormat>
        <label>VEP Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Visit_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_to_Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>want to avail doctor’s visit in plant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visitor_Entry_Date__c</fullName>
        <label>Visitor Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visitor_Exit_Date__c</fullName>
        <label>Visitor Exit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>When_was_the_last_visit_to_doctor__c</fullName>
        <label>When was the last visit to doctor?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Inhaler_do_you_use_if_applicable__c</fullName>
        <label>Which Inhaler do you use, if applicable?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vep Visitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Factory_to_Visit__c</columns>
        <columns>Date_From__c</columns>
        <columns>Date_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Visits</fullName>
        <columns>NAME</columns>
        <columns>Date_From__c</columns>
        <columns>Date_To__c</columns>
        <columns>Person_to_Meet__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Visits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vep Visitors</pluralLabel>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Readonly</fullName>
        <active>true</active>
        <label>Request Readonly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_on_Behalf</fullName>
        <active>true</active>
        <label>Request on Behalf</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VEP_Contact_should_be_number</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNUMBER( Contact__c ) &amp;&amp;  !ISBLANK(Contact__c)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Please Enter a Valid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Date_To_is_grater_than_Date_From</fullName>
        <active>true</active>
        <errorConditionFormula>Date_To__c &lt; Date_From__c</errorConditionFormula>
        <errorDisplayField>Date_To__c</errorDisplayField>
        <errorMessage>Must be greater than or equal to From Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Greyout_ShopFloor_if_Asthma_Checked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Are_you_suffering_from_Asthma__c &amp;&amp;  Shop_Floor_Area__c , true, false)</errorConditionFormula>
        <errorDisplayField>Shop_Floor_Area__c</errorDisplayField>
        <errorMessage>This area is restricted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Name_uneditable_on_Readonly_layout</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISPICKVAL(Status__c, &apos;Pending Approval&apos;))  &amp;&amp;  PRIORVALUE(Name) !=Name</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name should not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Reason_For_Other_should_be_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Reason_for_Visit__c , &apos;Other&apos;) &amp;&amp;  ISBLANK( Reason_for_Visit_Other__c ) || (!ISPICKVAL( Reason_for_Visit__c , &apos;Other&apos;) &amp;&amp; !ISBLANK(Reason_for_Visit_Other__c)))</errorConditionFormula>
        <errorDisplayField>Reason_for_Visit_Other__c</errorDisplayField>
        <errorMessage>Field is required if Reason for Visit is &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Visit_Entry_date_less_than_Exit_date</fullName>
        <active>true</active>
        <errorConditionFormula>Visitor_Exit_Date__c  &lt;  Visitor_Entry_Date__c</errorConditionFormula>
        <errorDisplayField>Visitor_Exit_Date__c</errorDisplayField>
        <errorMessage>Must be greater than or equal to Visit Entry Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEP_Visit_Must_be_a_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Date_From__c &lt; Today() || Date_To__c &lt; Today()</errorConditionFormula>
        <errorMessage>Visit Must be a Future Date</errorMessage>
    </validationRules>
</CustomObject>